--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "description": "Lector de facturas (Node)",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "engines": { "node": ">=18 <=20" },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "multer": "1.4.5-lts.1",
+    "openai": "^4.56.0",
     "pdf-parse": "^1.1.1",
-    "xlsx": "^0.18.5",
     "pdfkit": "^0.13.0",
-    "ejs": "^3.1.9",
-    "openai": "^4.56.0"
+    "mime-types": "^2.1.35"
   }
 }
